// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Aircraft: Details of aircraft operated by the airline.
Airline: Airline operator details.
Airport: Stores airport details.
BoardingPass: Details of boarding passes issued to passengers.
Booking: Stores ticket booking information linking passengers to flights.
Flight: Details of flights including departure and arrival airports.
Passenger: Details of passengers.
CheckIn: Check-in details for flights.
CrewMember: Stores crew member details associated with airlines.
Luggage: Details luggage carried by passengers.
MaintenanceRecord: Records maintenance details of aircraft.
Route: Flight route details for airlines.
'''
}

Table Aircraft {
    id INTEGER [primary key]
    model VARCHAR 
    max_capacity INTEGER 
    aviation_serial_number VARCHAR 
    }

Table Airline {
    id INTEGER [primary key]
    name VARCHAR 
    iata_code VARCHAR 
    }

Table Airport {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    code VARCHAR 
    }

Table BoardingPass {
    id INTEGER [primary key]
    booking_id INTEGER 
    issued_time DATETIME 
    seat_number VARCHAR 
    }

Table Booking {
    id INTEGER [primary key]
    flight_id INTEGER 
    passenger_id INTEGER 
    date_of_booking DATETIME 
    seat_number VARCHAR 
    }

Table Flight {
    id INTEGER [primary key]
    number VARCHAR 
    departure_id INTEGER 
    arrival_id INTEGER 
    date DATE 
    }

Table Passenger {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    passport_number VARCHAR 
    }

Table CheckIn {
    id INTEGER [primary key]
    booking_id INTEGER 
    check_in_time DATETIME 
    gate_number VARCHAR 
    }

Table CrewMember {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    position VARCHAR 
    airline_id INTEGER 
    }

Table Luggage {
    id INTEGER [primary key]
    passenger_id INTEGER 
    weight FLOAT 
    dimensions VARCHAR 
    }

Table MaintenanceRecord {
    id INTEGER [primary key]
    aircraft_id INTEGER 
    last_maintenance_date DATETIME 
    description VARCHAR 
    }

Table Route {
    id INTEGER [primary key]
    airline_id INTEGER 
    from_airport_id INTEGER 
    to_airport_id INTEGER 
    duration INTEGER 
    }



// Relationships
    Ref: BoardingPass.(booking_id) < Booking.(id)
    Ref: Booking.(flight_id) < Flight.(id)
    Ref: Booking.(passenger_id) < Passenger.(id)
    Ref: Flight.(arrival_id) < Airport.(id)
    Ref: Flight.(departure_id) < Airport.(id)
    Ref: CheckIn.(booking_id) < Booking.(id)
    Ref: CrewMember.(airline_id) < Airline.(id)
    Ref: Luggage.(passenger_id) < Passenger.(id)
    Ref: MaintenanceRecord.(aircraft_id) < Aircraft.(id)
    Ref: Route.(airline_id) < Airline.(id)
    Ref: Route.(from_airport_id) < Airport.(id)
    Ref: Route.(to_airport_id) < Airport.(id)
